vlib/v/checker/tests/embed_unknown_compress_type.vv
fn main() {
	test := $embed_file('embed_unknown_compress_type.vv', .this_is_not_a_valid_compression_type)
	println(test.to_string())
}
